--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -2,9 +2,9 @@ name: Java CI with Ant
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build:
