--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -27,3 +27,10 @@ jobs:
 
     - name: Build with Ant
       run: ant
+      
+    - name: Upload JAR file (optional)
+      uses: actions/upload-artifact@v4
+      with:
+        name: my-app-yash-jar
+        path: / 
+          
